# AURA

AURA_docking/: DOB_LCSS_2025.m  Dock_L1DOB_CLBF.m  adf.m  dock_aura.m  dock_miqp.m  miqpcontrol.m  sdf.m  side_dock.m
AURA_docking/before/: deadcontrol.m  dock_aura_filter.m  untitled3.m
SI_matlab_code/: 030619.csv  030623.csv  030623_1.csv  SI_data.txt  SI_u.m  SI_vr.m  convertSteeringToPwm.m  convertThrustToPwm.m  traj_ship.m
aura_mpc/: CMakeLists.txt  package.xml
aura_mpc/scripts/: acados_setting.py  gen_ref.py  mpc_aura.py
aura_msg/: CMakeLists.txt  package.xml
aura_msg/msg/: MPCState.msg  MPCTraj.msg  ObsState.msg  Parameter.msg  Waypoint.msg
env/: heron_map_gui_L1_sin.py  ros_sim.py  ros_sim_dp.py  wpt_pub.py  wpt_pub_og.py
nmea_msgs/msg/: Gpgga.msg  Gprmc.msg
py_plc/: package.xml  setup.cfg  setup.py
py_plc/py_plc/: plccomm.py  plccomm_test.py
wpt/: CMakeLists.txt
wpt/System identification/: record.py  recorded_data_circle2.csv  recorded_data_wpt1.csv
wpt/include/: L1_control.h  LawnMower.h
wpt/launch/: wpt_launch.py
wpt/scripts/: csadi_ex.py  heron_map_gui copy.py  heron_map_gui.py  heron_map_gui_dock.py  heron_map_gui_only_traj.py  plc.py  plccomm.py  si.py  thrust_check.py  wpt_lm.xlsx  wpt_pub.py  wpt_pub_LM.py  wpt_pub_excel.py  wpt_pub_square.py  wpt_square.xlsx
wpt/scripts/CBF_aura/: gen_ref.py
wpt/src/: DP.cpp  Lawnmower_pub.cpp  SI.cpp  aura_wpt.cpp  aura_wpt_model_L1.cpp  aura_wpt_model_carrot_pid copy.cpp  aura_wpt_model_carrot_pid.cpp  aura_wpt_model_pid.cpp  aura_wpt_unmodel_pid.cpp  ekf_filter.cpp  ekf_filter_px4.cpp  ex_pub.cpp  si.cpp
wpt_px4/: CMakeLists.txt  package.xml
wpt_px4/System identification/: recorded_data_circle1.csv  recorded_data_wpt2.csv
wpt_px4/include/: L1_control.h
wpt_px4/launch/: wpt_launch.py
wpt_px4/scripts/: ex_cbf.py  heron_map_gui copy.py  heron_map_gui.py  heron_map_gui_dock.py  heron_map_gui_only_traj.py  plccomm.py  si.py  thrust_check.py  wpt.xlsx  wpt_pub.py  wpt_pub_LM.py  wpt_pub_excel.py  wpt_square (copy).xlsx  wpt_square.xlsx
wpt_px4/src/: aura_wpt copy.cpp  aura_wpt_model_carrot_pid copy.cpp  aura_wpt_model_carrot_pid.cpp  aura_wpt_model_carrot_pid_thrust copy.cpp  aura_wpt_model_carrot_pid_thrust.cpp  aura_wpt_model_pid.cpp  aura_wpt_og.cpp  aura_wpt_unmodel_pid.cpp  ekf_filter copy.cpp  ekf_filter.cpp  ex_sub.cpp
